backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-app-tier: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: creptech.azurecr.io/backend-backend:latest 
          name: backend
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
